--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,11 @@
  </form>
    <div id='chart' class='chart'”></div>
  </body>
-<!--comment-->
+<!--comment
 <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
 <script type='text/javascript'>
   var graphs = {{graphJSON | safe}};
   Plotly.plot('chart',graphs,{});
 </script>
+-->
 </html>
