--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <p><input type="file" name="archivo" multiple></p>
     <p><input type="submit" value="Submit"></p>
  </form>
-   <div id='chart' class='chart'”></div>
+   <div id='chart' class='chart'></div>
  </body>
 <!--comment
 <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
