--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,11 @@
 
 <!DOCTYPE html>
 <html>
- <head> <title>Load file </title> </head>
+ <head>
+     <meta name="viewport" content="initial-scale=1, width=device-width">
+     <title>Load file </title>
+ </head>
+
  <body>
   <h1>Upload your CSV files</h1>
   <form action="/upload" method="POST" enctype="multipart/form-data">
