--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,8 @@
   <h1>Upload your CSV files</h1>
   <form action="/upload" method="POST" enctype="multipart/form-data">
     <p><input type="file" name="archivo" multiple></p>
+    <p> <input type="checkbox" id= "isCurv" name="isCurv" /> <label for="isCurv"> Curvatura</label><br> </p>
+
     <p><input type="submit" value="Submit"></p>
  </form>
  </body>
